[gd_scene load_steps=3 format=3 uid="uid://c4u0nwj7hlpww"]

[ext_resource type="Script" path="res://scenes/game_root/game/2d/chat/chat.gd" id="1_dgt4w"]
[ext_resource type="Script" path="res://scenes/game_root/game/2d/chat/scroll_container.gd" id="2_m5pua"]

[node name="Chat" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_dgt4w")

[node name="Panel" type="Panel" parent="."]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="ColorRect" type="ColorRect" parent="Panel"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 520.0
grow_vertical = 2
color = Color(0.0290591, 0.149347, 0.1231, 1)

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 550.0
grow_vertical = 2
size_flags_horizontal = 0
theme_override_constants/separation = 0

[node name="MarginContainer" type="MarginContainer" parent="Panel/HBoxContainer"]
layout_mode = 2
mouse_filter = 0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/HBoxContainer/MarginContainer"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/HBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0
vertical_scroll_mode = 2
script = ExtResource("2_m5pua")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/HBoxContainer/MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HSeparator" type="HSeparator" parent="Panel/HBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/HBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10
size_flags_stretch_ratio = 0.0

[node name="SendMessageBtn" type="Button" parent="Panel/HBoxContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Отправить"

[node name="MessageBox" type="TextEdit" parent="Panel/HBoxContainer/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_horizontal = 3

[node name="Button2" type="Button" parent="Panel/HBoxContainer"]
custom_minimum_size = Vector2(30, 100)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4

[connection signal="pressed" from="Panel/HBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/SendMessageBtn" to="." method="_on_send_message_btn_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer/Button2" to="." method="_on_button_2_pressed"]
